--- a/package.json
+++ b/package.json
@@ -3,20 +3,24 @@
   "version": "1.0.0",
   "main": "expo-router/entry",
   "scripts": {
-    "start": "expo start",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web",
+    "start": " expo start",
+    "android": " expo run:android",
+    "ios": " expo run:ios",
+    "web": " expo start --web",
     "prepare": "husky"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
+    "@gorhom/bottom-sheet": "^5.2.8",
     "@hookform/resolvers": "^5.2.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@tanstack/react-query": "^5.90.16",
     "axios": "^1.13.2",
-    "expo": "~54.0.31",
+    "clsx": "^2.1.1",
+    "expo": "^54.0.32",
+    "expo-checkbox": "~5.0.8",
     "expo-constants": "~18.0.13",
+    "expo-image-picker": "^17.0.10",
     "expo-linking": "~8.0.11",
     "expo-router": "~6.0.21",
     "expo-status-bar": "~3.0.9",
@@ -24,12 +28,15 @@
     "react": "19.1.0",
     "react-hook-form": "^7.71.0",
     "react-native": "0.81.5",
+    "react-native-gesture-handler": "^2.30.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-worklets": "^0.7.1",
     "tailwind-merge": "^3.4.0",
     "tailwind-variants": "^3.2.2",
+    "toastify-react-native": "^7.2.3",
     "zod": "^3.23.8",
     "zustand": "^5.0.10"
   },
@@ -40,7 +47,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
     "prettier": "^3.8.1",
-    "prettier-plugin-tailwindcss": "^0.5.11",
+    "prettier-plugin-tailwindcss": "^0.7.2",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.9.2"
   },
